--- a/styles/pages/index.scss
+++ b/styles/pages/index.scss
@@ -61,6 +61,7 @@ main {
     button {
         background-color: var(--secondary);
         position: absolute;
+        top: 20px;
         border-radius: 50%;
         height: 50px;
         width: 50px;
@@ -74,7 +75,7 @@ main {
     nav {
         position: relative;
         height: 90%;
-        margin-top: 50px;
+        margin-top: 70px;
         width: 700px;
         overflow: hidden;
         
