--- a/styles/parts/footer.scss
+++ b/styles/parts/footer.scss
@@ -1,5 +1,4 @@
 footer {
-    grid-area: footer;
     position: sticky;
     right: 0;
     bottom: 0;
