--- a/styles/parts/header.scss
+++ b/styles/parts/header.scss
@@ -1,11 +1,11 @@
 header {
     --shadow: -2px 2px 10px rgba(0, 0, 0, .5);
-    grid-area: header;
     position: sticky;
     top: 0;
-    margin-top: 10px;
+    padding: 10px 0;
     display: flex;
     justify-content: space-between;
+    z-index: 100;
 
     // Necessary to be global since class is added by an action
 
